been set to `true`.
 - CPU usage when enabling DNSCrypt ephemeral keys has been reduced.
 - New command-line option: `-show-certs` to print DoH certificate
hashes.
 - Solaris packages are now provided.
 - DoH servers on a non-standard port, with stamps that don't include
IP addresses, and without working system resolvers can now be properly
bootstrapped.

* Version 2.0.25
 - The example IP address for network probes didn't work on Windows.
The example configuration file has been updated and the fallback
resolver IP is now used when no netprobe address has been configured.

* Version 2.0.24
 - The query log now includes the time it took to complete the
transaction, the name of the resolver that sent the response and if
the response was served from the cache. Thanks to Ferdinand Holzer for
his help!
 - The list of resolvers, sorted by latency, is now printed after all
the resolvers have been probed.
 - The "fastest" load-balancing strategy has been renamed to "first".
 - On Windows, a nul byte is sent to the netprobe address. This is
required to check for connectivity on this platform. Thanks to Mathias
Berchtold.
 - The Malwaredomainlist URL was updated to directly parse the host
list. Thanks to Encrypted.Town.
 - The Python script to generate lists of blacklisted domains is now
compatible both with Python 2 and Python 3. Thanks to Simon R.
 - A warning is now displayed for DoH is requested but the server
doesn't speak HTTP/2.
 - A crash with loaded-balanced sets of cloaked names was fixed.
Thanks to @inkblotadmirer for the report.
 - Resolvers are now tried in random order to avoid favoring the first
ones at startup.

* Version 2.0.23
 - Binaries for FreeBSD/armv7 are now available.
 - .onion servers are now automatically ignored if Tor routing is not
enabled.
 - Caching of server addresses has been improved, especially when
using proxies.
 - DNSCrypt communications are now automatically forced to using TCP
when a SOCKS proxy has been set up.

* Version 2.0.22